@@ -19,18 +19,18 @@
     }
   , "path": []
   }
-, "preload-fonts":
+, "fonts":
   [ { "path-pieces": [ "static", "fonts", "FiraSans-Hair.woff2" ]
-    , "preload": false
+    , "preload": true
     }
   , { "path-pieces": [ "static", "fonts", "FiraSans-HairItalic.woff2" ]
     , "preload": false
     }
   , { "path-pieces": [ "static", "fonts", "FiraSans-UltraLight.woff2" ]
-    , "preload": false
+    , "preload": true
     }
   , { "path-pieces": [ "static", "fonts", "FiraSans-UltraLightItalic.woff2" ]
-    , "preload": false
+    , "preload": true
     }
   , { "path-pieces": [ "static", "fonts", "FiraSans-Light.woff2" ]
     , "preload": false
@@ -39,7 +39,7 @@
     , "preload": false
     }
   , { "path-pieces": [ "static", "fonts", "FiraSans-Regular.woff2" ]
-    , "preload": false
+    , "preload": true
     }
   , { "path-pieces": [ "static", "fonts", "FiraSans-Italic.woff2" ]
     , "preload": false
@@ -57,7 +57,7 @@
     , "preload": false
     }
   , { "path-pieces": [ "static", "fonts", "FiraSans-Bold.woff2" ]
-    , "preload": false
+    , "preload": true
     }
   , { "path-pieces": [ "static", "fonts", "FiraSans-BoldItalic.woff2" ]
     , "preload": false
@@ -87,13 +87,13 @@
     , "preload": false
     }
   , { "path-pieces": [ "static", "fonts", "FiraSansCondensed-Light.woff2" ]
-    , "preload": false
+    , "preload": true
     }
   , { "path-pieces": [ "static", "fonts", "FiraSansCondensed-LightItalic.woff2" ]
     , "preload": false
     }
   , { "path-pieces": [ "static", "fonts", "FiraSansCondensed-Regular.woff2" ]
-    , "preload": false
+    , "preload": true
     }
   , { "path-pieces": [ "static", "fonts", "FiraSansCondensed-Italic.woff2" ]
     , "preload": false
@@ -129,7 +129,7 @@
     , "preload": false
     }
   , { "path-pieces": [ "static", "fonts", "FiraMono-Regular.woff2" ]
-    , "preload": false
+    , "preload": true
     }
   , { "path-pieces": [ "static", "fonts", "FiraMono-Medium.woff2" ]
     , "preload": false
